Opened up line-height on h1; prevents ugly overlap of bottom border on blog listing page

--- a/assets/css/push.scss
+++ b/assets/css/push.scss
@@ -173,6 +173,7 @@ header#page_header {
     h1 {
       color: $black;
       margin: 0 0 $baseLineHeight * .25 0;
+      line-height: $baseLineHeight * .85;
     }
     h2 {
       font-size: $baseFontSize;
